--- a/view/productView.html
+++ b/view/productView.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
     <h1>Fetching all Products</h1>
+    <form>
+        <label for="product">Product Name:</label>
+        <input type="text" id="product" name="productName" />
+        <button type="submit">Add Product</button>
+    </form>
+    </div>
 </body>
 </html>
