--- a/view/productView.html
+++ b/view/productView.html
@@ -9,11 +9,14 @@
 <body>
     <div>
     <h1>Fetching all Products</h1>
-    <form>
+    <form onsubmit="onSubmitHandler(event)">
         <label for="product">Product Name:</label>
         <input type="text" id="product" name="productName" />
         <button type="submit">Add Product</button>
     </form>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/product.js"></script>
 </body>
 </html>
